.metadata/.plugins/org.eclipse.cdt.ui/Project.build.log
12:45:52 **** Incremental Build of configuration Debug for project Project ****
make all 
Building file: D:/engineering/Arm IMT/project/02-MCAL/02-GPIO/GPIO_Program.c
Invoking: Cross ARM GNU C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=soft -Og -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections -fno-move-loop-invariants -Wall -Wextra  -g3 -DDEBUG -DUSE_FULL_ASSERT -DOS_USE_SEMIHOSTING -DTRACE -DOS_USE_TRACE_SEMIHOSTING_DEBUG -DSTM32F401xC -DUSE_HAL_DRIVER -DHSE_VALUE=25000000 -I"../include" -I"../system/include" -I"../system/include/cmsis" -I"../system/include/stm32f4-hal" -std=gnu11 -MMD -MP -MF"src/GPIO_Program.d" -MT"src/GPIO_Program.d" -c -o "src/GPIO_Program.o" "D:/engineering/Arm IMT/project/02-MCAL/02-GPIO/GPIO_Program.c"
Finished building: D:/engineering/Arm IMT/project/02-MCAL/02-GPIO/GPIO_Program.c
 
Building file: D:/engineering/Arm IMT/project/02-MCAL/02-GPIO/GPIO_config.c
Invoking: Cross ARM GNU C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=soft -Og -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections -fno-move-loop-invariants -Wall -Wextra  -g3 -DDEBUG -DUSE_FULL_ASSERT -DOS_USE_SEMIHOSTING -DTRACE -DOS_USE_TRACE_SEMIHOSTING_DEBUG -DSTM32F401xC -DUSE_HAL_DRIVER -DHSE_VALUE=25000000 -I"../include" -I"../system/include" -I"../system/include/cmsis" -I"../system/include/stm32f4-hal" -std=gnu11 -MMD -MP -MF"src/GPIO_config.d" -MT"src/GPIO_config.d" -c -o "src/GPIO_config.o" "D:/engineering/Arm IMT/project/02-MCAL/02-GPIO/GPIO_config.c"
Finished building: D:/engineering/Arm IMT/project/02-MCAL/02-GPIO/GPIO_config.c
 
Building file: ../src/main.c
Invoking: Cross ARM GNU C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=soft -Og -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections -fno-move-loop-invariants -Wall -Wextra  -g3 -DDEBUG -DUSE_FULL_ASSERT -DOS_USE_SEMIHOSTING -DTRACE -DOS_USE_TRACE_SEMIHOSTING_DEBUG -DSTM32F401xC -DUSE_HAL_DRIVER -DHSE_VALUE=25000000 -I"../include" -I"../system/include" -I"../system/include/cmsis" -I"../system/include/stm32f4-hal" -std=gnu11 -MMD -MP -MF"src/main.d" -MT"src/main.o" -c -o "src/main.o" "../src/main.c"
In file included from ../src/main.c:8:0:
../include/GPIO_interface.h:15:18: error: unknown type name 'Ports'
 void SetPinValue(Ports Port,Pins pin,OutputValues value);
                  ^~~~~
../include/GPIO_interface.h:15:29: error: unknown type name 'Pins'; did you mean 'int'?
 void SetPinValue(Ports Port,Pins pin,OutputValues value);
                             ^~~~
                             int
../include/GPIO_interface.h:15:38: error: unknown type name 'OutputValues'
 void SetPinValue(Ports Port,Pins pin,OutputValues value);
                                      ^~~~~~~~~~~~
../include/GPIO_interface.h:16:16: error: unknown type name 'Ports'
 u8 GetPinValue(Ports Port,Pins pin);
                ^~~~~
../include/GPIO_interface.h:16:27: error: unknown type name 'Pins'; did you mean 'int'?
 u8 GetPinValue(Ports Port,Pins pin);
                           ^~~~
                           int
make: *** [src/subdir.mk:56: src/main.o] Error 1

12:45:53 Build Finished (took 796ms)

